internal/builder/testdata/single/annotation/header.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "foo"
  namespace: production
  annotations:
    bfe.ingress.kubernetes.io/router.header: "key: value"

spec:
  rules:
    - host: example.net
      http:
        paths:
          - path: /bar
            backend:
              serviceName: service1
              servicePort: 80
          - path: /foo
            backend:
              serviceName: service2
              servicePort: 80
